cmake_minimum_required(VERSION 3.22)
project(CLASSES)

set(CMAKE_CXX_STANDARD 14)

add_executable(CLASSES main.cpp Program1.cpp Program2.cpp Program3.cpp Program4.cpp Program5.cpp Program6.cpp Program7.cpp Program8.cpp Program9.cpp Program10.cpp Program11.cpp Program12.h Program12-Rectangle.cpp Program12.cpp Program13.cpp Program14.cpp Program15.cpp Program16.cpp Program17.h Program17-Account.cpp Program17.cpp Program18.cpp Program19.cpp Program20.cpp)
