cmake_minimum_required(VERSION 3.22)
project(FUNCTIONS)

set(CMAKE_CXX_STANDARD 14)

add_executable(FUNCTIONS main.cpp Program1.cpp Program2.cpp Program3.cpp Program4.cpp Program5.cpp Program6.cpp Program7.cpp Program8.cpp Program9.cpp Program10.cpp Program11.cpp Program12.cpp Program13.cpp Program14.cpp Program15.cpp Program16.cpp Program17.cpp Program18.cpp Program19.cpp Program20.cpp Program21.cpp Program22.cpp Program23.cpp Program24.cpp Program25.cpp Program26.cpp Program27.cpp Program28.cpp Program29.cpp Program30.cpp Program31.cpp Program32.cpp Program33.cpp Program34.cpp)
